src/objects/POIHeader__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_c__c</fullName>
        <label>Image__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubTitle__c</fullName>
        <label>SubTitle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UIControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControl</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipName>PosHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POIHeader</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POIHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>